@@ -1,0 +1,41 @@
+/**
+ * This file is part of OpenMediaVault.
+ *
+ * @license   http://www.gnu.org/licenses/gpl.html GPL Version 3
+ * @author    Volker Theile <volker.theile@openmediavault.org>
+ * @copyright Copyright (c) 2009-2012 Volker Theile
+ *
+ * OpenMediaVault is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * any later version.
+ *
+ * OpenMediaVault is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with OpenMediaVault. If not, see <http://www.gnu.org/licenses/>.
+ */
+
+Ext.ns("OMV");
+
+OMV.languages = [
+	// The supported languages are hardcoded and are not translated.
+	[ "en","English" ], // English
+	[ "de_DE","Deutsch" ], // German
+	[ "ru_RU","русский" ], // Russian
+	[ "nl_NL","Nederlands" ], // Dutch
+	[ "it_IT","Italiano" ], // Italian
+	[ "el_GR","ελληνικά" ], // Greek
+	[ "tr_TR","Türk" ], // Turkish
+	[ "fr_FR","Français" ], // French
+	[ "pl_PL","Polski" ], // Polish
+	[ "es_ES","Español" ], // Spanish
+	[ "hu_HU","Magyar" ], // Hungarian
+	[ "da_DA","Dansk" ], // Danish
+	[ "uk_UK","Український" ], // Ukrainian
+	[ "no_NO","Norske" ], // Norwegian
+	[ "sv_SV","Svenskt" ] // Swedish
+];
